--- a/style/Ornek.css
+++ b/style/Ornek.css
@@ -13,6 +13,11 @@ text-transform: capitalize;
 transition: 0.2s ease;
 }
 
+.logo img{
+    height:6rem ;
+    }
+
+
 :root{
     --main-color:#e84242;
     --black-color:#0e0e0e;
@@ -29,7 +34,20 @@ html{
 }
 body{
     background-color: var(--main-color);
-    height: 200vh;
+}
+
+section{
+    padding: 35rem 7%;
+}
+.btn{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: 2rem 3.75rem;
+    border-radius: 30rem;
+    font-size: 1.7rem;
+    color: #fff;
+    background-color: var(--black-color);
+    cursor: pointer;
 }
 
 .title{
@@ -54,6 +72,48 @@ height: 10rem;
     
 }
 
-.logo img{
-    height:6rem ;
-    }
+.header .navbar a{
+    margin: 0 1rem;
+    font-size: 1.6rem;
+    color: var(--black-color);
+    border-bottom:0.1rem solid transparent ;
+
+}
+.header .navbar .active,
+.header .navbar a:hover{
+    border-color: var(--main-color);
+    padding-bottom: 0.5rem;
+}
+
+.header .buttons button{
+    cursor: pointer;
+    font-size: 2.5rem;
+    margin-left: 2rem;
+    background-color: transparent;
+}
+
+.home{
+    min-height: 100vh;
+    background:url(../home.jpg) no-repeat;
+    background-size:cover ;
+    background-position:center ;
+    margin-top: -14.5rem;
+    display: flex;
+    align-items: center;
+}
+.home .content{
+   max-width: 60rem;
+}
+
+.home .content h3{
+    font-size: 6rem;
+    color: #fff;
+ }
+
+ .home .content p{
+    font-size: 2rem;
+    font-weight: 300;
+    line-height: 1.8;
+    padding: 1rem 0;
+    color:#ccc;
+ }
