--- a/style/Ornek.css
+++ b/style/Ornek.css
@@ -1,169 +1,291 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
 /* Google Fonts'tan Poppins fontunu içe aktarır */
 
 /* Tüm elementleri sıfırlar ve varsayılan stilleri belirler */
 * {
-    font-family: "Poppins", sans-serif; /* Tüm metinleri Poppins fontuyla gösterir */
-    margin: 0; /* Dış boşlukları sıfırlar */
-    padding: 0; /* İç boşlukları sıfırlar */
-    box-sizing: border-box; /* Kutu modelini belirler */
-    outline: none; /* Odak çerçevesini kaldırır */
-    border: none; /* Kenarlık eklemeyi kaldırır */
-    text-decoration: none; /* Metin altı çizgilerini kaldırır */
-    text-transform: capitalize; /* Metinleri baş harflerini büyük yapar */
-    transition: 0.2s ease; /* Geçiş efektini belirler */
+  font-family: "Poppins", sans-serif; /* Tüm metinleri Poppins fontuyla gösterir */
+  margin: 0; /* Dış boşlukları sıfırlar */
+  padding: 0; /* İç boşlukları sıfırlar */
+  box-sizing: border-box; /* Kutu modelini belirler */
+  outline: none; /* Odak çerçevesini kaldırır */
+  border: none; /* Kenarlık eklemeyi kaldırır */
+  text-decoration: none; /* Metin altı çizgilerini kaldırır */
+  text-transform: capitalize; /* Metinleri baş harflerini büyük yapar */
+  transition: 0.2s ease; /* Geçiş efektini belirler */
 }
 
 /* .logo sınıfındaki resmin boyutunu belirler */
 .logo img {
-    height: 6rem;
+  height: 6rem;
 }
 
 /* Kök (root) değişkenlerini tanımlar */
 :root {
-    --main-color: #e84242; /* Ana renk değişkeni */
-    --black-color: #0e0e0e; /* Siyah renk değişkeni */
-    --border: 0.1rem solid rgba(255, 255, 255, 0.4); /* Kenarlık değişkeni */
+  --main-color: #e84242; /* Ana renk değişkeni */
+  --black-color: #0e0e0e; /* Siyah renk değişkeni */
+  --border: 0.1rem solid rgba(255, 255, 255, 0.4); /* Kenarlık değişkeni */
 }
 
 /* Temel HTML stilleri */
 html {
-    font-size: 62.5%; /* Temel font büyüklüğünü belirler */
-    overflow-x: hidden; /* Yatay taşmaları gizler */
-    scroll-padding-top: 9rem; /* Kaydırma başlığı için boşluk ayarlar */
-    scroll-behavior: smooth; /* Kaydırma davranışını belirler */
+  font-size: 62.5%; /* Temel font büyüklüğünü belirler */
+  overflow-x: hidden; /* Yatay taşmaları gizler */
+  scroll-padding-top: 9rem; /* Kaydırma başlığı için boşluk ayarlar */
+  scroll-behavior: smooth; /* Kaydırma davranışını belirler */
+}
+
+/* ekranı aşağı yukarı ayarını yapar */
+html::-webkit-scrollbar {
+  width: 0.8rem;
+  background-color: white;
+}
+
+html::-webkit-scrollbar-thumb {
+  width: 0.8rem;
+  background-color: var(--black-color);
 }
 
 /* Temel body stilleri */
 body {
-    background-color: var(--main-color); /* Arka plan rengini belirler */
-
+  background-color: var(--main-color); /* Arka plan rengini belirler */
 }
 
 /* Bölümlerin stilleri */
 section {
-    padding: 35rem 7%; /* Bölüm içi dolguyu belirler */
+  padding: 35rem 7%; /* Bölüm içi dolguyu belirler */
+}
+
+a{
+    color: var(--black-color);
+    text-decoration: none;
 }
 
 /* Buton stilini belirler */
 .btn {
-    margin-top: 1rem; /* Üst boşluğu belirler */
-    display: inline-block; /* Blok öğeleri yan yana hizalar */
-    padding: 2rem 3.75rem; /* Dolguyu belirler */
-    border-radius: 30rem; /* Köşe yarıçapını belirler */
-    font-size: 1.7rem; /* Metin büyüklüğünü belirler */
-    color: #fff; /* Metin rengini belirler */
-    background-color: var(--black-color); /* Arkaplan rengini belirler */
-    cursor: pointer; /* İşaretçinin el işareti olmasını sağlar */
+  margin-top: 1rem; /* Üst boşluğu belirler */
+  display: inline-block; /* Blok öğeleri yan yana hizalar */
+  padding: 2rem 3.75rem; /* Dolguyu belirler */
+  border-radius: 30rem; /* Köşe yarıçapını belirler */
+  font-size: 1.7rem; /* Metin büyüklüğünü belirler */
+  color: #fff; /* Metin rengini belirler */
+  background-color: var(--black-color); /* Arkaplan rengini belirler */
+  cursor: pointer; /* İşaretçinin el işareti olmasını sağlar */
+}
+.btn:hover {
+  opacity: 0.8;
+}
+
+.heading {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 4rem;
+  margin-bottom: 3.5rem;
+  border-bottom: 0.1rem solid #fff;
+}
+
+.heading span {
+  text-transform: uppercase;
+  color: var(--black-color);
 }
 
 /* Başlık stilini belirler */
 .title {
-    font-size: 2rem; /* Metin büyüklüğünü belirler */
+  font-size: 2rem; /* Metin büyüklüğünü belirler */
 }
 
 /* Başlık sınıfındaki resmin boyutunu belirler */
 .header .logo img {
-    height: 10rem;
+  height: 10rem;
 }
 
 /* Başlık stilini belirler */
 .header {
-    background-color: white; /* Arka plan rengini belirler */
-    display: flex; /* Öğeleri yatay olarak hizalar */
-    align-items: center; /* Öğeleri dikey olarak hizalar */
-    justify-content: space-between; /* Öğeleri aralarında eşit mesafede hizalar */
-    padding: 0 7%; /* Dolguyu belirler */
-    margin: 2rem 7%; /* Kenar boşluklarını belirler */
-    border-radius: 30rem; /* Köşe yarıçapını belirler */
-    box-shadow: 0px 0px 17px -2px rgba(0, 0, 0, 0.75); /* Kutu gölgesini belirler */
-    position: sticky; /* Yapışkan pozisyon belirler */
-    top: 0; /* Üst kenara göre konumunu belirler */
-    z-index: 1000; /* Yığınlama düzeyini belirler */
+  background-color: white; /* Arka plan rengini belirler */
+  display: flex; /* Öğeleri yatay olarak hizalar */
+  align-items: center; /* Öğeleri dikey olarak hizalar */
+  justify-content: space-between; /* Öğeleri aralarında eşit mesafede hizalar */
+  padding: 0 7%; /* Dolguyu belirler */
+  margin: 2rem 7%; /* Kenar boşluklarını belirler */
+  border-radius: 30rem; /* Köşe yarıçapını belirler */
+  box-shadow: 0px 0px 17px -2px rgba(44, 41, 41, 0.75); /* Kutu gölgesini belirler */
+  position: sticky; /* Yapışkan pozisyon belirler */
+  top: 0; /* Üst kenara göre konumunu belirler */
+  z-index: 1000; /* Yığınlama düzeyini belirler */
 }
 
 /* Başlık menü bağlantılarının stilini belirler */
 .header .navbar a {
-    margin: 0 1rem; /* Kenar boşluklarını belirler */
-    font-size: 1.6rem; /* Metin büyüklüğünü belirler */
-    color: var(--black-color); /* Metin rengini belirler */
-    border-bottom: 0.1rem solid transparent; /* Alt kenarlık belirler */
+  margin: 0 1rem; /* Kenar boşluklarını belirler */
+  font-size: 1.6rem; /* Metin büyüklüğünü belirler */
+  color: var(--black-color); /* Metin rengini belirler */
+  border-bottom: 0.1rem solid transparent; /* Alt kenarlık belirler */
 }
 
 /* Başlık menü bağlantılarının etkin ve üzerine gelindiğindeki stilini belirler */
 .header .navbar .active,
 .header .navbar a:hover {
-    border-color: var(--main-color); /* Alt kenarlık rengini belirler */
-    padding-bottom: 0.5rem; /* Alt dolguyu belirler */
+  border-color: var(--main-color); /* Alt kenarlık rengini belirler */
+  padding-bottom: 0.5rem; /* Alt dolguyu belirler */
 }
 
 /* Başlık düğmelerinin stilini belirler */
 .header .buttons button {
-    cursor: pointer; /* İşaretçinin el işareti olmasını sağlar */
-    font-size: 2.5rem; /* Metin büyüklüğünü belirler */
-    margin-left: 2rem; /* Sol boşluğu belirler */
-    background-color: transparent; /* Arkaplan rengini belirler */
+  cursor: pointer; /* İşaretçinin el işareti olmasını sağlar */
+  font-size: 2.5rem; /* Metin büyüklüğünü belirler */
+  margin-left: 2rem; /* Sol boşluğu belirler */
+  background-color: transparent; /* Arkaplan rengini belirler */
 }
 
 /* Anasayfa stilini belirler */
 .home {
-    min-height: 100vh; /* Minimum yüksekliği belirler */
-    background: url(../images/home.jpg) no-repeat; /* Arka plan resmini belirler */
-    background-size: cover; /* Arka plan resminin boyutunu belirler */
-    background-position: center; /* Arka plan resminin konumunu belirler */
-    margin-top: -14.5rem; /* Üst boşluğu belirler */
-    display: flex; /* Öğeleri yatay olarak hizalar */
-    align-items: center; /* Öğeleri dikey olarak hizalar */
+  min-height: 100vh; /* Minimum yüksekliği belirler */
+  background: url(../images/home.jpg) no-repeat; /* Arka plan resmini belirler */
+  background-size: cover; /* Arka plan resminin boyutunu belirler */
+  background-position: center; /* Arka plan resminin konumunu belirler */
+  margin-top: -14.5rem; /* Üst boşluğu belirler */
+  display: flex; /* Öğeleri yatay olarak hizalar */
+  align-items: center; /* Öğeleri dikey olarak hizalar */
 }
 
 /* Anasayfa içeriğinin stilini belirler */
 .home .content {
-    max-width: 60rem; /* Maksimum genişliği belirler */
+  max-width: 60rem; /* Maksimum genişliği belirler */
 }
 
 /* Anasayfa başlığının stilini belirler */
 .home .content h3 {
-    font-size: 6rem; /* Metin büyüklüğünü belirler */
-    color: #fff; /* Metin rengini belirler */
+  font-size: 6rem; /* Metin büyüklüğünü belirler */
+  color: #fff; /* Metin rengini belirler */
 }
 
 /* Anasayfa paragrafının stilini belirler */
 .home .content p {
-    font-size: 2rem; /* Metin büyüklüğünü belirler */
-    font-weight: 300; /* Metin kalınlığını belirler */
-    line-height: 1.8; /* Satır yüksekliğini belirler */
-    padding: 1rem 0; /* Dolguyu belirler */
-    color: #ccc; /* Metin rengini belirler */
+  font-size: 2rem; /* Metin büyüklüğünü belirler */
+  font-weight: 300; /* Metin kalınlığını belirler */
+  line-height: 1.8; /* Satır yüksekliğini belirler */
+  padding: 1rem 0; /* Dolguyu belirler */
+  color: #ccc; /* Metin rengini belirler */
 }
-
 
 /* Menü Start */
-.menu .box-container{
-    display: grid; 
-    grid-template-columns: repeat(auto-fit,minmax(30rem, 1fr));
-    gap:1.5rem;
+.menu .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 2rem;
 }
-.menu .box-container .box{
-    padding: 3rem;
-    background-color: #fff;
-    border-radius: 3rem;
-    min-height:60rem ;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-
+.menu .box-container .box {
+  padding: 3rem;
+  background-color: #fff;
+  border-radius: 3rem;
+  min-height: 60rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
 }
-.menu .box-container .box img{
-    width: 100%;
-    object-fit: cover;
-}
-
-.menu .box-container .box .menu-category{
-    width: 100%;
-    object-fit: cover;
+.menu .box-container .box img {
+  width: 100%;
+  object-fit: cover;
 }
 
+.menu .box-container .box .menu-category {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
 
+.menu .box-container .box h3 {
+  font-size: 3rem;
+  padding: 1rem 0;
+}
+
+.menu .box-container .box .price {
+  font-size: 2.5rem;
+  padding: 0.5rem 0;
+}
+
+.menu .box-container .box .price span {
+  /* fiyatın üzerini çizer */
+  text-decoration: line-through;
+  font-size: 1.5rem;
+  font-weight: 300;
+}
 
 /* Menü End */
+
+/* products start*/
+
+.products .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 2rem;
+}
+
+.products .box-container .box {
+  text-align: center;
+  background-color: #fff;
+  border-radius: 3rem;
+  position: relative;
+  height: 60rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 3rem;
+}
+
+.products .box-container .box .box-head {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  z-index: 10;
+}
+
+.products .box-container .box .box-head .title {
+  font-size: 1.4rem;
+}
+
+.products .box-container .box .box-head .name {
+  font-size: 4rem;
+  font-weight: bold;
+  text-align: start;
+  overflow-wrap: anywhere;
+}
+
+.products .box-container .dark-bg .box-head .name,
+.products .box-container .dark-bg .box-head .title{
+    color: #fff;
+}
+
+.products .box-container img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    object-fit: cover;
+    transform: translate(-50%,-50%);
+    border-radius: 3rem;
+}
+
+.products .box-container .dark-bg img{
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   transform:unset ;
+}
+
+.products .box-container .box-bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    z-index: 10;
+} 
+
+.products .box-container .box-bottom .info{
+    display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+}
+
+/*products end */
