--- a/style/Ornek.css
+++ b/style/Ornek.css
@@ -55,9 +55,9 @@ section {
   padding: 35rem 7%; /* Bölüm içi dolguyu belirler */
 }
 
-a{
-    color: var(--black-color);
-    text-decoration: none;
+a {
+  color: var(--black-color);
+  text-decoration: none;
 }
 
 /* Buton stilini belirler */
@@ -86,6 +86,14 @@ a{
 .heading span {
   text-transform: uppercase;
   color: var(--black-color);
+}
+
+.search-input {
+  font-size: 1.6rem;
+  color: var(--black-color);
+  padding: 1rem;
+  text-transform: none;
+  border-radius: 3rem;
 }
 
 /* Başlık stilini belirler */
@@ -136,6 +144,9 @@ a{
   background-color: transparent; /* Arkaplan rengini belirler */
 }
 
+#menu-btn {
+  display: none;
+}
 /* Anasayfa stilini belirler */
 .home {
   min-height: 100vh; /* Minimum yüksekliği belirler */
@@ -252,40 +263,369 @@ a{
 }
 
 .products .box-container .dark-bg .box-head .name,
-.products .box-container .dark-bg .box-head .title{
-    color: #fff;
+.products .box-container .dark-bg .box-head .title {
+  color: #fff;
 }
 
-.products .box-container img{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    object-fit: cover;
-    transform: translate(-50%,-50%);
-    border-radius: 3rem;
+.products .box-container img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  border-radius: 3rem;
 }
 
-.products .box-container .dark-bg img{
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   transform:unset ;
+.products .box-container .dark-bg img {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: unset;
 }
 
-.products .box-container .box-bottom{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    z-index: 10;
-} 
-
-.products .box-container .box-bottom .info{
-    display: flex;
-   flex-direction: column;
-   align-items: flex-start;
+.products .box-container .box-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  z-index: 10;
 }
 
+.products .box-container .box-bottom .info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.products .box-container .box-bottom .info .price {
+  font-size: 3rem;
+}
+
+.products .box-container .box-bottom .info .amount {
+  font-size: 1.4rem;
+}
+
+.products .box-container .dark-bg .box-bottom .info .price,
+.products .box-container .dark-bg .box-bottom .info .amount {
+  color: #fff;
+}
+
+.products .box-container .box-bottom .product-btn a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 6.5rem;
+  height: 6.5rem;
+  border: 0.2rem solid var(--main-color);
+}
+.products .box-container .box-bottom .product-btn a i {
+  font-size: 1.6 rem;
+  color: var(--main-color);
+}
 /*products end */
+
+/* about start */
+.about .row {
+  display: flex;
+  flex-wrap: wrap;
+
+  column-gap: 2rem;
+}
+
+.about .row .image {
+  flex: 1 1 45rem;
+}
+
+.about .row img {
+  width: 100%;
+  border-radius: 3rem;
+}
+
+.about .row .content {
+  flex: 1 1 45rem;
+}
+
+.about .row .content h3 {
+  font-size: 3rem;
+  color: #fff;
+}
+
+.about .row .content p {
+  font-size: 1.6rem;
+  color: #ccc;
+  padding: 1rem 0;
+  line-height: 1.8;
+}
+/* about end */
+
+/* review start */
+.review .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+.review .box-container .box {
+  border: var(--border);
+  text-align: center;
+  padding: 3rem 2rem;
+  background-color: #fff;
+  border-radius: 3rem;
+}
+
+.review .box-container .box p {
+  font-size: 1.5rem;
+  line-height: 1.8;
+  padding: 2rem 0;
+}
+
+.review .box-container .box .user {
+  height: 7rem;
+  width: 7rem;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.review .box-container .box h3 {
+  padding: 1rem 0;
+  font-size: 2rem;
+  color: var(--main-color);
+}
+
+.review .box-container .box .starts i {
+  font-size: 1.5rem;
+  color: gold;
+}
+
+/* review end */
+
+/* contact start */
+.contact .row {
+  display: flex;
+  background-color: var(--black-color);
+  flex-wrap: wrap; /*ekran küçüldüğünde alta at */
+  gap: 1rem;
+}
+
+.contact .row .map {
+  flex: 1 1 45rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.contact .row form {
+  flex: 1 1 45rem;
+  padding: 5rem 2rem;
+  text-align: center;
+}
+
+.contact .row h3 {
+  text-transform: uppercase; /* hepsini büyük yazar */
+  font-size: 3.5rem;
+  color: #fff;
+}
+
+.contact .row form .inputBox {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem 0;
+  border: var(--border);
+}
+
+.contact .row form .inputBox i {
+  color: #fff;
+  font-size: 2rem;
+  padding-left: 2rem;
+}
+
+.contact .row form .inputBox input {
+  width: 100%;
+  padding: 2rem;
+  font-size: 1.7rem;
+  color: #fff;
+  text-transform: none;
+  background: none;
+}
+
+.contact .row form .btn {
+  color: var(--main-color);
+  background-color: #fff;
+  font-weight: bold;
+}
+/* contact end */
+
+/* blog start */
+.blog .box-container {
+  display: flex;
+  grid-template-columns: repeat(outo-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+.blog .box-container .box {
+  background-color: #fff;
+  border-radius: 3rem;
+}
+
+.blog .box-container .box .images {
+  height: 25rem;
+  overflow: hidden;
+  width: 100%;
+  border-top-left-radius: 3rem;
+  border-top-right-radius: 3rem;
+}
+
+.blog .box-container .box .images img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+}
+
+/* fare fotorafın üzerine getirdiğinde fotoraf biraz geri gelsin */
+.blog .box-container .box:hover .images img {
+  transform: scale(1.2);
+}
+
+.blog .box-container .box .content {
+  padding: 2rem;
+}
+
+.blog .box-container .box .content .title {
+  line-height: 1.5;
+  font-size: 2.5rem;
+}
+
+.blog .box-container .box .content span {
+  display: block;
+  padding-top: 1rem;
+  font-size: 2rem;
+}
+
+.blog .box-container .box .content p {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #a39999;
+  padding: 1rem;
+}
+/* blog end */
+
+/* footer start */
+.footer {
+  background-color: var(--black-color);
+  text-align: center;
+}
+
+.footer .search {
+  display: flex;
+  justify-content: center;
+}
+
+.footer .search .search-input {
+  width: 30rem;
+}
+.footer .search .btn {
+  background-color: var(--main-color);
+  padding: 1rem 2rem;
+  margin-left: 1rem;
+}
+
+.footer .share {
+  padding: 2rem 0;
+}
+
+.footer .share a {
+  width: 5rem;
+  height: 5rem;
+  line-height: 5rem;
+  color: #fff;
+  font-size: 2rem;
+  border: var(--border);
+  border-radius: 50%;
+  margin: 0.3rem;
+}
+
+.footer .share a:hover {
+  background-color: var(--main-color);
+}
+
+.footer .links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.footer .links a {
+  background-color: var(--main-color);
+  padding: 0.7rem 2rem;
+  color: #fff;
+  font-size: 2rem;
+  border: var(--border);
+  border-radius: 3rem;
+}
+
+.footer .links a:hover {
+  background-color: var(--black-color);
+  opacity: 0.7;
+}
+
+.footer .credit {
+  font-size: 2rem;
+  color: #fff;
+  font-weight: 300;
+  padding-top: 1.5rem;
+}
+
+.footer .credit span {
+  color: var(--main-color);
+}
+/* footer end */
+
+/* //ekranı küçültüğümüzde ekranda oluşan kaymaları kontrol eder */
+/* responsive start */
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
+  .header {
+    padding: 1.5rem 2rem;
+  }
+
+  .header .logo img {
+    height: 7rem;
+  }
+
+  section {
+    padding: 2rem;
+  }
+
+  .products .box-container .box .box-head .name {
+    font-size: 3.4rem;
+  }
+}
+
+@media (max-width: 768px) {
+  #menu-btn{
+    display: inline-block;
+  }
+
+  .header .navbar{
+    position: absolute;
+    top: 95%;
+    background-color: #fff;
+    height: calc(100vh - 9rem);
+    width: 30rem;
+    box-shadow: 0px 20px 14px 0px rgb(0 0 0 /75%);
+    right: -100%;
+  }
+
+  .header .navbar a{
+    color: var(--black-color);
+    display: block;
+    margin: 1.5rem;
+  }
+}
+
+/* responsive end */
