--- a/style/Ornek.css
+++ b/style/Ornek.css
@@ -163,7 +163,9 @@ a {
 .header .navbar a:hover {
   border-color: var(--main-color); /* Alt kenarlık rengini belirler */
   padding-bottom: 0.5rem; /* Alt dolguyu belirler */
+  
 }
+
 
 /* Başlık düğmelerinin stilini belirler */
 .header .buttons button {
@@ -176,7 +178,7 @@ a {
 .header .cart-items-container {
   position: absolute;
   top: 95%;
-  height: calc(100vh - 9rem);
+  height:max-content;
   width: 35rem;
   background-color: #fff;
   box-shadow: 0px 0px 20px 14px rgba(0 0 0 /75%); /* Kutu gölgesini belirler */
@@ -704,13 +706,14 @@ padding-bottom: 0.5rem;
     position: absolute;
     top: 95%;
     background-color: #fff;
-    height: calc(100vh - 9rem);
+     height: max-content; /*öğenin yüksekliğini, içeriğinin tamamını kapsayacak şekilde ayarlar. */
+
     width: 30rem;
     box-shadow: 0px 20px 14px 0px rgb(0 0 0 /75%);
     right: -100%;
   }
 
-  .header .navbar .active {
+  .header  .active {
     right: 3rem;
   }
   .header .navbar a {
